--- a/hello.html
+++ b/hello.html
@@ -1,1 +1,13 @@
-<DOCTYPE! html>
+
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Abouds Website </title>
+</head>
+<img src="https://imgix.bustle.com/uploads/image/2018/10/18/4e1afb93-afba-49fe-96e6-b2bbd1ea0125-safe-toys-for-kittens.jpg?w=970&h=546&fit=crop&crop=faces&auto=format&q=70" width="100" height="102">
+<a href="https://phz8.petinsurance.com/pet-breeds/cat-breeds/lifestyle-cat-breeds/10-best-cat-breeds-for-kids">10 Best Cat Breeds for Families</a>
+<body>
+	<h1> Heading 1 </h1>
+	<p>  paragraph 1 </p>
+</body>
+</html>
